# dotruler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/airules/: __init__.py  cli.py  config.py  models.py  registry.py
src/airules/outputs/: __init__.py  aider.py  base.py  claude_md.py  codex.py  copilot.py  cursorrules.py  windsurf.py
src/dotruler/: __init__.py  cli.py  config.py  models.py  registry.py  scanner.py
src/dotruler/outputs/: __init__.py  aider.py  base.py  claude_md.py  codex.py  copilot.py  cursorrules.py  windsurf.py
tests/: conftest.py  test_cli.py  test_config.py  test_scanner.py
tests/test_outputs/: test_renderers.py
