[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotruler"
version = "0.1.1"
description = "ðŸ“ One config. Every AI coding tool. Always in sync."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Joseph Yaw Agyeman" }]
keywords = ["ai", "rules", "claude", "cursor", "copilot", "windsurf", "codex", "config", "sync"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer[all]>=0.9.0",
]

[project.scripts]
dotruler = "dotruler.cli:app"

[project.urls]
Homepage = "https://github.com/TRINITY-21/dotruler"
Repository = "https://github.com/TRINITY-21/dotruler"
Issues = "https://github.com/TRINITY-21/dotruler/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dotruler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
